# test-driven-development-python

./: .gitignore
backend/: pyproject.toml
backend/list/: models.py  tests.py  views.py
backend/list/migrations/: 0001_initial.py  0002_item_text_alter_item_id.py
backend/list/templates/: home.html
backend/superlist/: asgi.py  functional-tests.py  settings.py
list/: tests.py
superlist/: functional-tests.py  settings.py  urls.py  wsgi.py
