[project]
name = "test-driven-development-python"
version = "0.0.1"
description = "Learning test driven development for python using examples."
authors = [
    {name = "Muhammad Umair",email = "mumair5393@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "selenium (>=4.28.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
